--- a/vercel.json
+++ b/vercel.json
@@ -1,35 +1,32 @@
 {
   "buildCommand": "cd devprofile-frontend && npm install && npm run build",
   "outputDirectory": "devprofile-frontend/dist/devprofile-frontend",
-  "env": {},
-  "regions": ["iad1"],
-  "public": true,
   "cleanUrls": true,
   "trailingSlash": false,
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
+  "functions": {
+    "api/**": {
+      "memory": 1024,
+      "maxDuration": 60
     }
-  ],
-  "headers": [
+  },
+  "routes": [
     {
-      "source": "/assets/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      }
     },
     {
-      "source": "/index.html",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=3600"
-        }
-      ]
+      "src": "/index.html",
+      "dest": "/index.html",
+      "headers": {
+        "Cache-Control": "public, max-age=0, must-revalidate"
+      }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
