Force Vercel redeploy: add NODE_ENV production to vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,9 @@
   "outputDirectory": "devprofile-frontend/dist/devprofile-frontend",
   "cleanUrls": true,
   "trailingSlash": false,
+  "env": {
+    "NODE_ENV": "production"
+  },
   "functions": {
     "api/**": {
       "memory": 1024,
