--- a/vercel.json
+++ b/vercel.json
@@ -3,29 +3,14 @@
   "outputDirectory": "devprofile-frontend/dist/devprofile-frontend",
   "cleanUrls": true,
   "trailingSlash": false,
-  "env": {
-    "NODE_ENV": "production"
-  },
-  "functions": {
-    "api/**": {
-      "memory": 1024,
-      "maxDuration": 60
-    }
-  },
   "routes": [
     {
       "src": "/assets/(.*)",
-      "dest": "/assets/$1",
-      "headers": {
-        "Cache-Control": "public, max-age=31536000, immutable"
-      }
+      "dest": "/assets/$1"
     },
     {
       "src": "/index.html",
-      "dest": "/index.html",
-      "headers": {
-        "Cache-Control": "public, max-age=0, must-revalidate"
-      }
+      "dest": "/index.html"
     },
     {
       "src": "/(.*)",
