fix(vercel): use rewrites only to avoid mixed routing properties

--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,14 @@
 {
   "buildCommand": "cd devprofile-frontend && npm install && npm run build",
   "outputDirectory": "devprofile-frontend/dist/devprofile-frontend",
-  "cleanUrls": true,
-  "trailingSlash": false,
-  "routes": [
+  "rewrites": [
     {
-      "src": "/assets/(.*)",
-      "dest": "/assets/$1"
+      "source": "/assets/:path*",
+      "destination": "/assets/:path*"
     },
     {
-      "src": "/index.html",
-      "dest": "/index.html"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/:path*",
+      "destination": "/index.html"
     }
   ]
 }
